[package]
edition = "2018"
name = "libpulse-glib-binding"
version = "2.20.2"
authors = ["Lyndon Brown <jnqnfe@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A Rust language binding for the PulseAudio libpulse-mainloop-glib library."
keywords = ["binding", "pulseaudio", "glib", "audio"]
homepage = "https://github.com/jnqnfe/pulse-binding-rust"
repository = "https://github.com/jnqnfe/pulse-binding-rust"
exclude = ["README.md"]

[dependencies]
libpulse-binding           = { path = "../pulse-binding",           version = "2.20", default-features = false }
libpulse-mainloop-glib-sys = { path = "../pulse-sys-mainloop-glib", version = "1.16", default-features = false }
glib-sys = { version = "0", default-features = false }
glib     = { version = "0", default-features = false }

[features]
default = ["pa_v8"]

# PA version compatibility selection
# See the overall project `COMPATIBILITY.md` file for explanation.
pa_v14 = ["pa_v13", "libpulse-binding/pa_v14", "libpulse-mainloop-glib-sys/pa_v14"]
pa_v13 = ["pa_v12", "libpulse-binding/pa_v13", "libpulse-mainloop-glib-sys/pa_v13"]
pa_v12 = ["pa_v8",  "libpulse-binding/pa_v12", "libpulse-mainloop-glib-sys/pa_v12"]
pa_v8  = ["pa_v6",  "libpulse-binding/pa_v8",  "libpulse-mainloop-glib-sys/pa_v8"]
pa_v6  = ["pa_v5",  "libpulse-binding/pa_v6",  "libpulse-mainloop-glib-sys/pa_v6"]
pa_v5  = [          "libpulse-binding/pa_v5",  "libpulse-mainloop-glib-sys/pa_v5"]

[package.metadata.docs.rs]
all-features = false
no-default-features = true
rustc-args = ["--cfg", "doc"]
rustdoc-args = ["--cfg", "docsrs"]
