[package]
edition = "2021"
name = "libpulse-glib-binding"
version = "2.29.0"
authors = ["Lyndon Brown <jnqnfe@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A Rust language binding for the PulseAudio libpulse-mainloop-glib library."
keywords = ["binding", "pulseaudio", "glib", "audio"]
homepage = "https://github.com/jnqnfe/pulse-binding-rust"
repository = "https://github.com/jnqnfe/pulse-binding-rust"
exclude = ["README.md"]
rust-version = "1.63"

[dependencies]
libpulse-binding           = { path = "../pulse-binding",           version = "2.29", default-features = false }
libpulse-mainloop-glib-sys = { path = "../pulse-sys-mainloop-glib", version = "1.22", default-features = false }
glib-sys = { version = "0", default-features = false }
glib     = { version = "0", default-features = false }

[features]
default = ["pa_v8"]

# PA version compatibility selection
# See the overall project `COMPATIBILITY.md` file for explanation.
pa_v15 = ["pa_v14", "libpulse-binding/pa_v15", "libpulse-mainloop-glib-sys/pa_v15"]
pa_v14 = ["pa_v13", "libpulse-binding/pa_v14", "libpulse-mainloop-glib-sys/pa_v14"]
pa_v13 = ["pa_v12", "libpulse-binding/pa_v13", "libpulse-mainloop-glib-sys/pa_v13"]
pa_v12 = ["pa_v8",  "libpulse-binding/pa_v12", "libpulse-mainloop-glib-sys/pa_v12"]
pa_v8  = ["pa_v6",  "libpulse-binding/pa_v8",  "libpulse-mainloop-glib-sys/pa_v8"]
pa_v6  = [          "libpulse-binding/pa_v6",  "libpulse-mainloop-glib-sys/pa_v6"]

[package.metadata.docs.rs]
all-features = false
no-default-features = true
rustdoc-args = ["--cfg", "docsrs"]
