[package]
name = "libpulse-simple-binding"
version = "2.18.1"
authors = ["Lyndon Brown <jnqnfe@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = """
A Rust language binding for the PulseAudio libpulse-simple library.
"""
keywords = ["binding", "pulse", "pulseaudio", "pulse-simple", "audio"]
homepage = "https://github.com/jnqnfe/pulse-binding-rust"
repository = "https://github.com/jnqnfe/pulse-binding-rust"
exclude = ["README.md"]
edition = "2018"

[dependencies]
libpulse-binding = { path = "../pulse-binding", version = "2.18", default-features = false }
libpulse-sys = { path = "../pulse-sys", version = "1.15", default-features = false }
libpulse-simple-sys = { path = "../pulse-sys-simple", version = "1.15", default-features = false }

[features]
default = ["pa_v8"]

# PA version compatibility selection
# See the overall project `COMPATIBILITY.md` file for explanation.
#
# Enables PA version 14 support
pa_v14 = ["pa_v13", "libpulse-binding/pa_v14", "libpulse-sys/pa_v14", "libpulse-simple-sys/pa_v14"]
# Enables PA version 13 support
pa_v13 = ["pa_v12", "libpulse-binding/pa_v13", "libpulse-sys/pa_v13", "libpulse-simple-sys/pa_v13"]
# Enables PA version 12 support
pa_v12 = ["pa_v8", "libpulse-binding/pa_v12", "libpulse-sys/pa_v12", "libpulse-simple-sys/pa_v12"]
# Enables PA version 8 support
pa_v8 = ["pa_v6", "libpulse-binding/pa_v8", "libpulse-sys/pa_v8", "libpulse-simple-sys/pa_v8"]
# Enables PA version 6 support
pa_v6 = ["pa_v5", "libpulse-binding/pa_v6", "libpulse-sys/pa_v6", "libpulse-simple-sys/pa_v6"]
# Enables PA version 5 support
pa_v5 = ["libpulse-binding/pa_v5", "libpulse-sys/pa_v5", "libpulse-simple-sys/pa_v5"]

# Documentation generation
# This is intended for use with generation of documentation only. It enables inclusion of the latest
# supported PA version features, but without triggering the build script’s pkg-config check.
dox = ["libpulse-binding/dox", "libpulse-sys/dox", "libpulse-simple-sys/dox"]

[package.metadata.docs.rs]
features = ["dox"]
all-features = false
no-default-features = true
