[package]
edition = "2018"
name = "libpulse-binding"
version = "2.19.0"
authors = ["Lyndon Brown <jnqnfe@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A Rust language binding for the PulseAudio libpulse library."
keywords = ["binding", "pulseaudio", "audio"]
homepage = "https://github.com/jnqnfe/pulse-binding-rust"
repository = "https://github.com/jnqnfe/pulse-binding-rust"
exclude = ["README.md"]

[dependencies]
libc = "0.2"
num-traits = "0.2"
num-derive = "0.3"
libpulse-sys = { path = "../pulse-sys", version = "1.15.1", default-features = false }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winsock2"], default-features = false }

[features]
default = ["pa_v8"]

# PA version compatibility selection
# See the overall project `COMPATIBILITY.md` file for explanation.
pa_v14 = ["pa_v13", "libpulse-sys/pa_v14"]
pa_v13 = ["pa_v12", "libpulse-sys/pa_v13"]
pa_v12 = ["pa_v8",  "libpulse-sys/pa_v12"]
pa_v8  = ["pa_v6",  "libpulse-sys/pa_v8"]
pa_v6  = ["pa_v5",  "libpulse-sys/pa_v6"]
pa_v5  = [          "libpulse-sys/pa_v5"]

# This skips the pkg-config check. It is meant for documentation generation purposes only.
dox = ["libpulse-sys/dox"]

[package.metadata.docs.rs]
features = ["dox"]
all-features = false
no-default-features = true
rustdoc-args = ["--cfg", "docsrs"]
