[package]
edition = "2021"
name = "libpulse-binding"
version = "2.28.0"
authors = ["Lyndon Brown <jnqnfe@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A Rust language binding for the PulseAudio libpulse library."
keywords = ["binding", "pulseaudio", "audio"]
homepage = "https://github.com/jnqnfe/pulse-binding-rust"
repository = "https://github.com/jnqnfe/pulse-binding-rust"
exclude = ["README.md"]
rust-version = "1.56"

[dependencies]
libc = "0.2"
bitflags = "1.2"
num-traits = "0.2"
num-derive = "0.3"
libpulse-sys = { path = "../pulse-sys", version = "1.20", default-features = false }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winsock2"], default-features = false }

[features]
default = ["pa_v8"]

# PA version compatibility selection
# See the overall project `COMPATIBILITY.md` file for explanation.
pa_v15 = ["pa_v14", "libpulse-sys/pa_v15"]
pa_v14 = ["pa_v13", "libpulse-sys/pa_v14"]
pa_v13 = ["pa_v12", "libpulse-sys/pa_v13"]
pa_v12 = ["pa_v8",  "libpulse-sys/pa_v12"]
pa_v8  = ["pa_v6",  "libpulse-sys/pa_v8"]
pa_v6  = [          "libpulse-sys/pa_v6"]

[package.metadata.docs.rs]
all-features = false
no-default-features = true
rustdoc-args = ["--cfg", "docsrs"]
