[package]
name = "libpulse-mainloop-glib-sys"
version = "1.5.0"
authors = ["Lyndon Brown <jnqnfe@gmail.com>"]
license = "LGPL-2.1+"
description = """
A Rust language linking library for the PulseAudio libpulse-mainloop-glib library.
"""
keywords = ["binding", "pulse", "pulseaudio", "pulse-mainloop-glib", "audio"]
links = "pulse-mainloop-glib"
build = "build.rs"
homepage = "https://github.com/jnqnfe/pulse-binding-rust"
repository = "https://github.com/jnqnfe/pulse-binding-rust"

[dependencies]
libpulse-sys = { path = "../pulse-sys", version = "1.5", default-features = false }

[target.'cfg(target_os="linux")'.build-dependencies]
pkg-config = "0.3"

[features]
default = ["latest_pa_common_compatibility"]

# PA version compatibility selection
# See the overall project `COMPATIBILITY.md` file for explanation.
latest_pa_common_compatibility = ["pa_v12_compatibility"]
latest_pa_compatibility = ["pa_v12_compatibility"]
pa_v12_compatibility = ["libpulse-sys/pa_v12_compatibility"]

# DEPRECATED, use `pa_v12_compatibility` instead
pa_encoding_from_string = ["pa_v12_compatibility"]

[badges]
travis-ci = { repository = "jnqnfe/pulse-binding-rust" }
