[package]
name = "libpulse-mainloop-glib-sys"
version = "1.8.0"
authors = ["Lyndon Brown <jnqnfe@gmail.com>"]
license = "LGPL-2.1+"
description = """
A Rust language linking library for the PulseAudio libpulse-mainloop-glib library.
"""
keywords = ["binding", "pulse", "pulseaudio", "pulse-mainloop-glib", "audio"]
links = "pulse-mainloop-glib"
build = "build.rs"
homepage = "https://github.com/jnqnfe/pulse-binding-rust"
repository = "https://github.com/jnqnfe/pulse-binding-rust"
edition = "2018"

[dependencies]
libpulse-sys = { path = "../pulse-sys", version = "1.8", default-features = false }
glib-sys = "0"

[target.'cfg(target_os="linux")'.build-dependencies]
pkg-config = "0.3"

[features]
default = ["latest_pa_common_compatibility"]

# PA version compatibility selection
# See the overall project `COMPATIBILITY.md` file for explanation.
#
# Alias targetting latest compatibility, with the exception only of that for a very new release
latest_pa_common_compatibility = ["pa_v12_compatibility"]
# Alias simply targetting latest compatibility
latest_pa_compatibility = ["pa_v12_compatibility"]
# Enables PA version 12 support
pa_v12_compatibility = [
    "pa_v8_compatibility", #include older
    "libpulse-sys/pa_v12_compatibility",
]
# Enables PA version 8 support
pa_v8_compatibility = [
    "pa_v6_compatibility", #include older
    "libpulse-sys/pa_v8_compatibility",
]
# Enables PA version 6 support
pa_v6_compatibility = [
    "libpulse-sys/pa_v6_compatibility",
]

# DEPRECATED, use `pa_v12_compatibility` instead
pa_encoding_from_string = ["pa_v12_compatibility"]

[badges]
travis-ci = { repository = "jnqnfe/pulse-binding-rust" }
