[package]
name = "libpulse-mainloop-glib-sys"
version = "1.15.0"
authors = ["Lyndon Brown <jnqnfe@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = """
A Rust language linking library for the PulseAudio libpulse-mainloop-glib library.
"""
keywords = ["binding", "pulse", "pulseaudio", "pulse-mainloop-glib", "audio"]
links = "pulse-mainloop-glib"
build = "build.rs"
homepage = "https://github.com/jnqnfe/pulse-binding-rust"
repository = "https://github.com/jnqnfe/pulse-binding-rust"
exclude = ["README.md"]
edition = "2018"

[dependencies]
libpulse-sys = { path = "../pulse-sys", version = "1.15", default-features = false }
glib-sys = { version = "0", default-features = false }

[build-dependencies]
pkg-config = "0.3"

[features]
default = ["pa_latest_common"]

# PA version compatibility selection
# See the overall project `COMPATIBILITY.md` file for explanation.
#
# Alias targetting latest compatibility, with the exception only of that for a very new release
pa_latest_common = ["pa_v13"]
# Alias simply targetting latest compatibility
pa_latest = ["pa_v13"]
# Enables PA version 14 support
pa_v14 = ["pa_v13", "libpulse-sys/pa_v14"]
# Enables PA version 13 support
pa_v13 = ["pa_v12", "libpulse-sys/pa_v13"]
# Enables PA version 12 support
pa_v12 = ["pa_v8", "libpulse-sys/pa_v12"]
# Enables PA version 8 support
pa_v8 = ["pa_v6", "libpulse-sys/pa_v8"]
# Enables PA version 6 support
pa_v6 = ["pa_v5", "libpulse-sys/pa_v6"]
# Enables PA version 5 support
pa_v5 = ["libpulse-sys/pa_v5"]

# Documentation generation
# This is intended for use with generation of documentation only. It enables inclusion of the latest
# supported PA version features, but without triggering the build script’s pkg-config check.
dox = ["libpulse-sys/dox"]

[package.metadata.docs.rs]
features = ["dox"]
all-features = false
no-default-features = true

[badges]
travis-ci = { repository = "jnqnfe/pulse-binding-rust" }
