[package]
name = "libpulse-simple-sys"
version = "1.15.1"
authors = ["Lyndon Brown <jnqnfe@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = """
A Rust language linking library for the PulseAudio libpulse-simple library.
"""
keywords = ["sys", "pulse", "pulseaudio", "pulse-simple", "audio"]
links = "pulse-simple"
build = "build.rs"
homepage = "https://github.com/jnqnfe/pulse-binding-rust"
repository = "https://github.com/jnqnfe/pulse-binding-rust"
exclude = ["README.md"]
edition = "2018"

[dependencies]
libpulse-sys = { path = "../pulse-sys", version = "1.15", default-features = false }

[build-dependencies]
pkg-config = "0.3"

[features]
default = ["pa_v8"]

# PA version compatibility selection
# See the overall project `COMPATIBILITY.md` file for explanation.
#
# Enables PA version 14 support
pa_v14 = ["pa_v13", "libpulse-sys/pa_v14"]
# Enables PA version 13 support
pa_v13 = ["pa_v12", "libpulse-sys/pa_v13"]
# Enables PA version 12 support
pa_v12 = ["pa_v8", "libpulse-sys/pa_v12"]
# Enables PA version 8 support
pa_v8 = ["pa_v6", "libpulse-sys/pa_v8"]
# Enables PA version 6 support
pa_v6 = ["pa_v5", "libpulse-sys/pa_v6"]
# Enables PA version 5 support
pa_v5 = ["libpulse-sys/pa_v5"]

# This skips the pkg-config check. It is meant for documentation generation purposes only.
dox = ["libpulse-sys/dox"]

[package.metadata.docs.rs]
features = ["dox"]
all-features = false
no-default-features = true
