[package]
edition = "2018"
name = "libpulse-simple-sys"
version = "1.15.1"
authors = ["Lyndon Brown <jnqnfe@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "FFI bindings for the PulseAudio libpulse-simple system library."
keywords = ["ffi", "pulseaudio", "audio"]
homepage = "https://github.com/jnqnfe/pulse-binding-rust"
repository = "https://github.com/jnqnfe/pulse-binding-rust"
exclude = ["README.md"]
links = "pulse-simple"
build = "build.rs"

[dependencies]
libpulse-sys = { path = "../pulse-sys", version = "1.15", default-features = false }

[build-dependencies]
pkg-config = "0.3"

[features]
default = ["pa_v8"]

# PA version compatibility selection
# See the overall project `COMPATIBILITY.md` file for explanation.
pa_v14 = ["pa_v13", "libpulse-sys/pa_v14"]
pa_v13 = ["pa_v12", "libpulse-sys/pa_v13"]
pa_v12 = ["pa_v8",  "libpulse-sys/pa_v12"]
pa_v8  = ["pa_v6",  "libpulse-sys/pa_v8"]
pa_v6  = ["pa_v5",  "libpulse-sys/pa_v6"]
pa_v5  = [          "libpulse-sys/pa_v5"]

# This skips the pkg-config check. It is meant for documentation generation purposes only.
dox = ["libpulse-sys/dox"]

[package.metadata.docs.rs]
features = ["dox"]
all-features = false
no-default-features = true
rustdoc-args = ["--cfg", "docsrs"]
