[package]
edition = "2018"
name = "libpulse-sys"
version = "1.15.3"
authors = ["Lyndon Brown <jnqnfe@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "FFI bindings for the PulseAudio libpulse system library."
keywords = ["ffi", "pulseaudio", "audio"]
homepage = "https://github.com/jnqnfe/pulse-binding-rust"
repository = "https://github.com/jnqnfe/pulse-binding-rust"
exclude = ["README.md"]
links = "pulse"
build = "build.rs"

[dependencies]
libc = "0.2"
num-traits = "0.2"
num-derive = "0.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winsock2"], default-features = false }

[build-dependencies]
pkg-config = "0.3"

[features]
default = ["pa_v8"]

# PA version compatibility selection
# See the overall project `COMPATIBILITY.md` file for explanation.
pa_v14 = ["pa_v13"]
pa_v13 = ["pa_v12"]
pa_v12 = ["pa_v8"]
pa_v8  = ["pa_v6"]
pa_v6  = ["pa_v5"]
pa_v5  = []

# This skips the pkg-config check. It is meant for documentation generation purposes only.
dox = []

[package.metadata.docs.rs]
features = ["dox"]
all-features = false
no-default-features = true
